# XStrike

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  run-all.ps1  rust-toolchain.toml  ruststrike.config.example.json
.cargo/: config.toml
agents/templates/: beacon-cycle.toml  beacon.toml  implant.toml
bofs/: beacon.h  build.bat
bofs/execution/: cmd_exec.c  powershell_exec.c
bofs/file_ops/: file_download.c  file_list.c  file_upload.c
bofs/info/: bof_whoami.c  proc_list.c  screenshot.c  sysinfo_collect.c
bofs/persistence/: schtask_persist.c  schtask_persist_com.c  schtask_persist_reg.c  schtask_persist_rpc.c  schtask_persist_xml.c  svc_create_api.c  svc_create_com.c  svc_create_sc.c
bofs/process/: proc_critical_set.c  proc_critical_unset.c  proc_kill.c
bofs/shellcode/: shellcode_exec.c  shellcode_exec_callback.c  shellcode_exec_debug.c  shellcode_exec_fiber.c  shellcode_exec_heap.c  shellcode_exec_inject.c  shellcode_exec_nt.c  shellcode_exec_ntalloc.c
bofs/test/: generate_test_shellcode.sh  test_exit_thread.c  test_messagebox.c  test_output.c
bofs/test-plugin/: build_zip.sh  manifest.json
bofs/user_mgmt/: user_create_cmd.c  user_create_net.c  user_create_ps.c
clients/client/: .gitignore  app.go  core.go  go.mod  wails.json
clients/go-server/: .gitignore  agents_api.go  api.go  boflib_api.go  bus.go  go.mod  listeners_api.go  main.go  protocol.go  session.go  store.go  stub_patcher.go  task.go  ws.go
clients/server/: .gitignore  agent_templates.go  agent_templates_test.go  api.go  (+17 more)
crates/beacon/: Cargo.toml  README.md  build.rs  smoke_listener.py  updatehelper.manifest
crates/beacon/src/: lib.rs  main.rs
crates/implant/: Cargo.toml  build.rs
crates/implant/src/: benign_strings.txt  lib.rs  main.rs  stealth.rs
examples/: README.md  beacon.h  cmd_exec.c  download.c  file_download.c  file_list.c  hello.c  ls.c  netstat.c  powershell_exec.c  proc_kill.c  proc_list.c  ps.c  screenshot.c  shellcode_exec.c  shellcode_exec_nt.c  sysinfo.c  upload.c  winapi_exec.c
tools/: cmd_exec_args.py  upload_args.py
zig-implant/: .gitignore  README.md  boftest.zig  build.zig  resource.rc  updatehelper.manifest
(+136 files in other folders)
