[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/loader",
    "crates/server",
    "crates/implant",
    "crates/beacon",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ruststrike"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_Memory", "Win32_System_Threading"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
